change in the pjson

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tinkjimmy.github.io/blog-it",
+  "homepage": "https://tinkjimmy.github.io/blog-react-app",
   "name": "blog-it",
   "version": "0.1.0",
   "private": true,
