--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "homepage": "https://tinkjimmy.github.io/blog-react-app",
-  "name": "blog-it",
+  
+  "name": "blog-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tinkjimmy.github.io/blog-react-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
