--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "predeploy": "npm run build",
   
     
-  "deploy": "gh-pages -d build",
+  "deploy": "gh-pages -b main -d build",
   
     
   "build": "react-scripts build",
