--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  
+  "homepage": "https://tinkjimmy.github.io/blog-react-app/",
+  "name": "blog-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
